# logicipi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yaml
src/logicipi/: __init__.py  function.py  structlog.py  utils.py
tests/: conftest.py  test_function.py  test_functions.py  test_structlog.py  utils.py
