[tool.poetry]
name = "logicipi"
version = "0.1.0"
description = "A log util based on structlog and google-cloud-logging"
authors = ["Infarmers <developers@infarm.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
structlog = "^20.1.0"
google-cloud-logging = "^1.15.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"
yapf = "^0.30.0"
colorama = "^0.4.3"
pre-commit = "^2.5.0"
pytest = "^5.4.3"
pytest-mock = "^3.1.1"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
