[tool.poetry]
name = "logicipi"
version = "0.1.1"
description = "A log util based on structlog and google-cloud-logging"
authors = ["Infarmers <developers@infarm.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
structlog = "^20.1.0"
google-cloud-logging = "^1.15.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
yapf = "^0.30.0"
colorama = "^0.4.4"
pre-commit = "*"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
coveralls = "^2.1.2"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
